/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2011-02-16 15:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  + source/compiler/harboury.c
  + source/macro/macroy.c
  + include/harboury.h
  + include/macroy.h
    ! these files were added to reduce complexity of building harbour, so that
    the use of bison parser can be eliminated. these files must be updated
    accordingly when harbour.sly or marco.y modified. to facilitate most
    users, the default build will use these files. those who wish to generate
    the files themselves can set an envar: SET HB_USE_BISON=1

  * winmake/makefile.*
  * winmake/hrbdll.pc
  * winmake/compile.mak
    ! modified to reflect the above configuration

2011-02-15 04:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/unicode/hbcctool.c
    ! use native xHarbour file functions
    ! some public variables are now static

  - contrib/unicode/util
    ! moved txt2cst routine to hbcctool.c

  - contrib/unicode/hbdecode.prg
  + contrib/unicode/hbcctool.c
    ! removed PRG section from hbdecode.prg
    ! renamed hbdecode.prg -> hbcctool.c

  + contrib/unicode/hbcc.h
    ! function prototypes used in hbcc lib

  * contrib/unicode/*.c
    + include "hbcc.h"

  * unicode/makefile.bc
  * unicode/makefile.vc
  * winmake/common.mak
  * winmake/compile.mak
    ! fixed to reflect the above changes

  + winmake/*.*
    ! commited missing files

  - contrib/unicode/hbcc.prg
  + contrib/unicode/hbcc.c
    ! removed PRG section and renamed hbcc.prg -> hbcc.c

  * winmake/compile.mak
    ! fixed to reflect above changes

  * tests/xhbenc.prg
    ! call :RefreshWindow() before navigating

  + contrib/png/pnginfo.h
  + contrib/png/pngstruct.h
  + contrib/png/pngdebug.h
    ! missing files in previous commit

  + contrib/png/pnglibconf.h
    ! missing file in previous commit
