@@ -1,3 +1,6 @@
+/*
+* $Id$
+*/
 
 /* A Bison parser, made by GNU Bison 2.4.1.  */
 
