@@ -8,6 +8,13 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2011-02-16 15:26 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * source/compiler/harboury.c
+  * source/macro/macroy.c
+  * include/harboury.h
+  * include/macroy.h
+    + add file id
+
 2011-02-16 15:20 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   + source/compiler/harboury.c
   + source/macro/macroy.c
